Fix event timing overflow

--- a/5.0/sass/style.scss
+++ b/5.0/sass/style.scss
@@ -65,6 +65,10 @@ a {
   }
 }
 
+.container {
+  width: 960px;
+}
+
 .banner {
   margin-bottom: 100px;
 
